apps/base/redirects/truenas/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: nas
  namespace: redirects
subsets:
  - addresses:
      - ip: 10.0.7.2
    ports:
      - port: 443
        protocol: TCP
