apps/base/redirects/truenas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nas
  namespace: redirects
spec:
  internalTrafficPolicy: Cluster
  ports:
    - port: 443
      protocol: TCP
      targetPort: 443
  sessionAffinity: None
  type: ClusterIP
